Search: Fix alignment with mark element in Firefox.

--- a/r2/r2/public/static/css/search.less
+++ b/r2/r2/public/static/css/search.less
@@ -91,17 +91,13 @@
     .search-result-header {
       .search-font-size();
 
-      > * {
+      * {
         vertical-align: top;
       }
 
       .search-title {
         font-size: @search-font-large * 1px;
         margin-right: @margin-x-small * 1px;
-
-        > mark {
-          vertical-align: middle;
-        }
       }
 
       .search-subreddit-link {
@@ -192,7 +188,6 @@
       background-color: transparent;
       color: inherit;
       font-weight: bold;
-      line-height: 1em;
     }
   }
 
